# mltl-inference

./: .gitignore  .gitmodules  README.md  datagen.py
paper/dsge+_fa23/: MLTL_Inference.tex  mybibliography.bib
paper/team_project_final/: 572final.tex  Citations.bib
paper/team_project_proposal/: 572proposal.tex  Citations.bib
paper/team_project_summary/: 572summary.tex
src/: .gitmodules  Makefile  datagen.py  main.cc  mltl_parser.py  utils.py
src/BN/: data.csv  data.txt  structure_learning.py  utils.py
src/DSGE+/: GE.py  analyze_log.py  params.txt  testGE.py  utils.py
src/DSGE+/logs/: basic_future.txt  basic_global.txt  log_nasa-atc_formula2.txt
src/GE_ltlf/: dataset.json  learn_ltl_matrix.py  matrix2ltl.py  runall.py  traces2json.py
src/GE_ltlf/logs/: basic_future.model  basic_future.txt  basic_global.model  basic_global.txt  basic_release.model  (+15 more)
src/MLTL_interpreter/: Makefile  interpret_batch.cpp  utils.cpp
src/WEST/: README.md  gui.py  trace.csv  west
src/astar/: .gitignore  Makefile  evaluate_mltl.cpp  libmltl.cc  libmltl.hh  libmltl_pybind.cc  main.cc  main.cpp  main.py  mltl_ast.cpp  mltl_ast.h  quine_mccluskey.cc  quine_mccluskey.cpp  quine_mccluskey.h  quine_mccluskey.hh  utils.cpp  utils.h
src/dataset/: summary.py
src/libmltl/: .gitignore  Makefile  README.md  ast.cc  main.cc  parser.cc
src/search/: Makefile
src/template/: .gitignore  Notes.txt  basic.py  basic2.py  basic3.py  genetic.py  mltl_parser.py  spec_pattern.py  spec_pattern2.py  spec_pattern3.py  spec_pattern4.py  svm.py
src/template/libmltl/: CMakeLists.txt  Readme.txt
(+15474 files in other folders)
